# example-go-bazel-protobuf

./: .editorconfig  .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  deps.bzl  go.mod  go.sum  proto-copy.bash  proto_copy.bzl
build-tools/: BUILD.bazel  copy_proto.bash  copy_proto.bat  copy_proto.bzl  run_gazelle.bat  run_gazelle_update_repos.bat
client/: BUILD.bazel  main.go
proto/: BUILD.bazel  address.proto  service.proto  tag.proto  user.proto
server/: BUILD.bazel  main.go
