load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/i-chi-li/example-go-bazel-protobuf
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

exports_files(
    ["proto-copy.bash"],
    visibility = ["//visibility:public"],
)

load("//:proto_copy.bzl", "proto_copy")

proto_copy(
    name = "proto-copy",
    src = "//proto:proto_go_proto",
    dir = "generated/proto",
    visibility = ["//visibility:public"],
)
