load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/i-chi-li/example-go-bazel-protobuf
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

exports_files(
    ["proto-copy.bash"],
    visibility = ["//visibility:public"],
)

load("//build-tools:copy_proto.bzl", "copy_proto")

copy_proto(
    name = "copy-proto",
    src = "//proto:proto_go_proto",
    dst = "generated/proto",
    visibility = ["//visibility:public"],
)
